fix update and optimize

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,12 +68,13 @@
   }
 }
 
-
-
-
 @keyframes marquee {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
 
 .animate-marquee {
@@ -81,7 +82,10 @@
   animation: marquee 30s linear infinite;
   width: max-content;
 }
+.animate-marquee:hover {
+  animation-play-state: paused;
+}
 
-body{
+body {
   user-select: none;
 }
